Pretty much works, but I have no idea why the database refuses to load properly in Dev environment..